// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will alias tables which have a schema 1`] = `
	SELECT
	  COUNT(*) AS \`count\`
	FROM
	  \`foobar\`.\`Foo\` AS \`$0\`
	WHERE
	  \`$0\`.\`color\` = 'red'
`;

exports[`will join using function 1`] = `
	SELECT
	  COUNT(*) AS \`count\`
	FROM
	  \`Foo\`
	  JOIN \`Bar\` ON \`Bar\`.\`name\` <> \`Foo\`.\`name\`
	  AND \`Bar\`.\`color\` = \`Foo\`.\`color\`
	WHERE
	  \`Foo\`.\`name\` <> 'Danny'
	  AND \`Bar\`.\`rating\` > 50
`;

exports[`will join using object 1`] = `
	SELECT
	  COUNT(*) AS \`count\`
	FROM
	  \`Foo\`
	  JOIN \`Bar\` ON \`Bar\`.\`color\` = \`Foo\`.\`color\`
	  JOIN \`Baz\` ON \`Baz\`.\`rating\` = \`Bar\`.\`rating\`
	WHERE
	  \`Foo\`.\`name\` <> 'Danny'
	  AND \`Bar\`.\`rating\` > 50
	  AND \`Baz\`.\`color\` = 'blue'
`;
